--- a/modules/cloudbuild/templates/cloudbuild-pull-request.yaml
+++ b/modules/cloudbuild/templates/cloudbuild-pull-request.yaml
@@ -29,19 +29,19 @@ steps:
               echo "*************************************************"
               terraform init || exit 1
 
-- id: 'tf validate'
-  name: ${_DEFAULT_REGION}-docker.pkg.dev/${_SEED_PROJECT_ID}/${_GAR_REPOSITORY}/terraform
-  dir: "${_WORKSTREAM_PATH}"
-  entrypoint: 'sh'
-  args:
-  - '-c'
-  - |
-              env=${env#*/}
-              echo ""
-              echo "*************** TERRAFORM VALIDATE ******************"
-              echo "******* At environment: ${_WORKSTREAM_PATH} *********"
-              echo "*************************************************"
-              terraform validate || exit 1
+# - id: 'tf validate'
+#   name: ${_DEFAULT_REGION}-docker.pkg.dev/${_SEED_PROJECT_ID}/${_GAR_REPOSITORY}/terraform
+#   dir: "${_WORKSTREAM_PATH}"
+#   entrypoint: 'sh'
+#   args:
+#   - '-c'
+#   - |
+#               env=${env#*/}
+#               echo ""
+#               echo "*************** TERRAFORM VALIDATE ******************"
+#               echo "******* At environment: ${_WORKSTREAM_PATH} *********"
+#               echo "*************************************************"
+#               terraform validate || exit 1
 
 - id: 'tf plan'
   name: ${_DEFAULT_REGION}-docker.pkg.dev/${_SEED_PROJECT_ID}/${_GAR_REPOSITORY}/terraform
