--- a/modules/cloudbuild/templates/cloudbuild-push-request.yaml
+++ b/modules/cloudbuild/templates/cloudbuild-push-request.yaml
@@ -28,18 +28,18 @@ steps:
               echo "*************************************************"
               terraform init || exit 1
 
-# - id: 'tf validate'
-#   name: ${_DEFAULT_REGION}-docker.pkg.dev/${_SEED_PROJECT_ID}/${_GAR_REPOSITORY}/terraform
-#   dir: "${_WORKSTREAM_PATH}"
-#   entrypoint: 'sh'
-#   args:
-#   - '-c'
-#   - |
-#               echo ""
-#               echo "*************** TERRAFORM VALIDATE ******************"
-#               echo "******* At environment: ${_WORKSTREAM_PATH} *************"
-#               echo "*************************************************"
-#               terraform validate || exit 1
+- id: 'tf validate'
+  name: ${_DEFAULT_REGION}-docker.pkg.dev/${_SEED_PROJECT_ID}/${_GAR_REPOSITORY}/terraform
+  dir: "${_WORKSTREAM_PATH}"
+  entrypoint: 'sh'
+  args:
+  - '-c'
+  - |
+              echo ""
+              echo "*************** TERRAFORM VALIDATE ******************"
+              echo "******* At environment: ${_WORKSTREAM_PATH} *************"
+              echo "*************************************************"
+              terraform validate || exit 1
 
 - id: 'tf plan'
   name: ${_DEFAULT_REGION}-docker.pkg.dev/${_SEED_PROJECT_ID}/${_GAR_REPOSITORY}/terraform
